# MakeTVPlaylist

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
Release/: tvplaylist
src/: libtvplaylist.h  main  main.cpp
